--- a/.gitignore
+++ b/.gitignore
@@ -44,9 +44,9 @@ UserInterface.xcuserstate
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
-Pods
+Pods/
 !Podfile
-!Podfile.lock
+Podfile.lock
 
 # Carthage
 #
