--- a/Example/Example/Info.plist
+++ b/Example/Example/Info.plist
@@ -30,6 +30,16 @@
 				<string>sac69330c5</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>bjtest</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>sa80e4dfd7</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
