--- a/Example/Example-iOS/Info.plist
+++ b/Example/Example-iOS/Info.plist
@@ -37,7 +37,7 @@
 			<string>bjtest</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>sa80e4dfd7</string>
+				<string>sabccc7723</string>
 			</array>
 		</dict>
 	</array>
