--- a/Example/Example.xcodeproj/xcshareddata/xcschemes/Example-iOS.xcscheme
+++ b/Example/Example.xcodeproj/xcshareddata/xcschemes/Example-iOS.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "4D15CF1224EE82E0003D2748"
-               BuildableName = "Example.app"
-               BlueprintName = "Example"
+               BuildableName = "Example-iOS.app"
+               BlueprintName = "Example-iOS"
                ReferencedContainer = "container:Example.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -45,8 +45,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4D15CF1224EE82E0003D2748"
-            BuildableName = "Example.app"
-            BlueprintName = "Example"
+            BuildableName = "Example-iOS.app"
+            BlueprintName = "Example-iOS"
             ReferencedContainer = "container:Example.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -69,8 +69,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4D15CF1224EE82E0003D2748"
-            BuildableName = "Example.app"
-            BlueprintName = "Example"
+            BuildableName = "Example-iOS.app"
+            BlueprintName = "Example-iOS"
             ReferencedContainer = "container:Example.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
