--- a/Example/Example-macOS/Info.plist
+++ b/Example/Example-macOS/Info.plist
@@ -41,7 +41,7 @@
 		<true/>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2021 Sensors Data Inc. All rights reserved.</string>
+	<string>Copyright © 2021-2022 Sensors Data Co., Ltd. All rights reserved.</string>
 	<key>NSMainStoryboardFile</key>
 	<string>Main</string>
 	<key>NSPrincipalClass</key>
