--- a/Example/Example-macOS/Info.plist
+++ b/Example/Example-macOS/Info.plist
@@ -30,6 +30,16 @@
 				<string>sabccc7723</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>abtest091_20.65</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>sa3db2c515</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
